force-app/bedrock/lib/async/objects/Async_Settings__c/Async_Settings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Async Settings</label>
</CustomObject>