force-app/bedrock/lib/async/objects/Async_Settings__c/fields/Archive_Threshold_Hours__c.field-meta.xml
<CustomField>
    <fullName>Archive_Threshold_Hours__c</fullName>
    <label>Archive Threshold Hours</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>