force-app/bedrock/lib/async/objects/Async_Settings__c/fields/Enable_Archive_Cleanup__c.field-meta.xml
<CustomField>
    <fullName>Enable_Archive_Cleanup__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Enable Archive Cleanup</label>
    <type>Checkbox</type>
</CustomField>