force-app/bedrock/lib/async/objects/Async_Settings__c/fields/Max_Archive_Age__c.field-meta.xml
<CustomField>
    <fullName>Max_Archive_Age__c</fullName>
    <label>Max Archive Age</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>