force-app/bedrock/lib/async/objects/Async_Settings__c/fields/Max_Threads__c.field-meta.xml
<CustomField>
    <fullName>Max_Threads__c</fullName>
    <label>Max Threads</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>